log
Tue 26 Mar 2024 03:08:09 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ae703b0
Tue 26 Mar 2024 03:14:44 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b12c2c0
Tue 26 Mar 2024 03:26:39 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
027e579
Tue 26 Mar 2024 03:27:55 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
aaf4a26
Tue 26 Mar 2024 03:31:27 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a11c9e3
Tue 26 Mar 2024 03:36:45 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
efd81d8
Tue 26 Mar 2024 04:36:32 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:7: error: ‘List’ {aka ‘struct List’} has no member named ‘Node’
   72 |   list->
      |       ^~
list.c:73:10: error: ‘head’ undeclared (first use in this function)
   73 |   Node * head;
      |          ^~~~
list.c:73:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:75:10: error: unused variable ‘current’ [-Werror=unused-variable]
   75 |   Node * current;
      |          ^~~~~~~
list.c:74:10: error: unused variable ‘tail’ [-Werror=unused-variable]
   74 |   Node * tail;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
f71b6d3
Tue 26 Mar 2024 04:37:04 PM UTC: 
 list.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  2|5
total_score: 15/70
a031900
Tue 26 Mar 2024 04:43:33 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
db67385
Tue 26 Mar 2024 04:44:25 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
de6f0c8
Tue 26 Mar 2024 05:11:42 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
59b3e22
Tue 26 Mar 2024 05:18:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
c5488ca
Tue 26 Mar 2024 05:20:15 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
c44c019
Tue 26 Mar 2024 05:21:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7c8d632
Tue 26 Mar 2024 05:23:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d0add69
Tue 26 Mar 2024 05:28:18 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
5af0bee
Tue 26 Mar 2024 05:33:40 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:60:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   60 |   if (list->tail != NULL)
      |   ^~
list.c:62:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   62 |     return list->tail->data;
      |     ^~~~~~
list.c: At top level:
list.c:64:3: error: expected identifier or ‘(’ before ‘return’
   64 |   return NULL;
      |   ^~~~~~
list.c:65:1: error: expected identifier or ‘(’ before ‘}’ token
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d848eef
